# CortexA55_apps_build

./: CMakeLists.txt  build.sh  sample
